--- a/thread.html
+++ b/thread.html
@@ -5,33 +5,70 @@
         </h1>
     </div>
     <div class="main">
-        <ol>
-        </ol>
+        <div class="header">
+        </div>
+        <textarea></textarea>
+        <button>add comment</button>
+        <div class="comments">
+        </div>
     </div>
     <script src="data.js"></script>
     <script>
-        console.log(threads);
-        var container = document.querySelector('ol');
-        for (let thread of threads) {
-            var html = `
-            <li class="row">
-                <a href="/thread.html?${thread.id}">
-                    <h4 class="title">
-                        ${thread.title}
-                    </h4>
-                    <div class="bottom">
-                        <p class="timestamp">
-                            ${new Date(thread.date).toLocaleString()}
+        var id = window.location.search.slice(1);
+        var thread = threads.find(t => t.id == id);
+        var header = document.querySelector('.header');
+        var headerHtml = `
+            <h4 class="title">
+                ${thread.title}
+            </h4>
+            <div class="bottom">
+                <p class="timestamp">
+                    ${new Date(thread.date).toLocaleString()}
+                </p>
+                <p class="comment-count">
+                    ${thread.comments.length} comments
+                </p>
+            </div>
+        `
+        header.insertAdjacentHTML('beforeend', headerHtml)
+
+        function addComment(comment) {
+            var commentHtml = `
+                <div class="comment">
+                    <div class="top-comment">
+                        <p class="user">
+                            ${comment.author}
                         </p>
-                        <p class="comment-count">
-                            ${thread.comments.length} comments
+                        <p class="comment-ts">
+                            ${new Date(comment.date).toLocaleString()}
                         </p>
                     </div>
-                </a>
-            </li>
+                    <div class="comment-content">
+                        ${comment.content}
+                    </div>
+                </div>
             `
-            container.insertAdjacentHTML('beforeend', html);
+            comments.insertAdjacentHTML('beforeend', commentHtml);
         }
+
+        var comments = document.querySelector('.comments');
+        for (let comment of thread.comments) {
+            addComment(comment);
+        }
+
+        var btn = document.querySelector('button');
+        btn.addEventListener('click', function() {
+            var txt = document.querySelector('textarea');
+            var comment = {
+                content: txt.value,
+                date: Date.now(),
+                author: 'Aaron'
+            }
+            addComment(comment);
+            txt.value = '';
+            thread.comments.push(comment);
+            localStorage.setItem('threads', JSON.stringify(threads));
+        })
     </script>
     <style>
         body {
@@ -47,24 +84,41 @@
         p {
             margin: 5px 0;
         }
+        textarea {
+            width: 80%;
+            height: 80px;
+        }
+        button {
+            display: block;
+            margin: 10px 0;
+        }
         .top-bar {
             background-color: skyblue;
             padding: 0 40px;
         }
         .main {
             background-color: #F6F6EF;
-            padding: 10px 15px;
+            padding: 10px 40px;
+        }
+        .comments {
+            margin: 40px 0;
+        }
+        .comment {
+            margin: 10px 0;
         }
         .row {
             padding: 5px 0;
         }
-        .bottom {
+        .bottom, .top-comment {
             display: flex;
             color: grey;
             font-size: 12px;
         }
         .timestamp {
             padding-right: 10px;
+        }
+        .comment-ts {
+            padding-left: 10px;
         }
     </style>
 </body>
