--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <body>
     <div class="top-bar">
-        <h1>
-            My Forum
-        </h1>
+        <h2>
+            JATH: Empowering Students
+        </h2>
     </div>
     <div class="main">
         <ol>
@@ -41,19 +41,22 @@
             text-decoration: none;
             color: black;
         }
-        h1, h4, ol {
+        h2, h4, ol {
             margin: 0;
+            font-family: roboto;
         }
         p {
             margin: 5px 0;
         }
         .top-bar {
-            background-color: skyblue;
+            background-color: rgb(47, 181, 235);
             padding: 0 40px;
+            border-radius: 5px 5px 0px 0px;
         }
         .main {
             background-color: #F6F6EF;
             padding: 10px 15px;
+            border-radius: 0px 0px 5px 5px;
         }
         .row {
             padding: 5px 0;
