--- a/thread.html
+++ b/thread.html
@@ -1,14 +1,14 @@
 <body>
     <div class="top-bar">
         <h1>
-            My Forum
+            Post a question
         </h1>
     </div>
     <div class="main">
         <div class="header">
         </div>
         <textarea></textarea>
-        <button>add comment</button>
+        <button>Post</button>
         <div class="comments">
         </div>
     </div>
@@ -93,12 +93,14 @@
             margin: 10px 0;
         }
         .top-bar {
-            background-color: skyblue;
+            background-color: rgb(99, 250, 200);
             padding: 0 40px;
+            border-radius: 5px 5px 0px 0px;
         }
         .main {
             background-color: #F6F6EF;
             padding: 10px 40px;
+            border-radius: 0px 0px 5px 5px;
         }
         .comments {
             margin: 40px 0;
